# x-competitor

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
output/: 拓竹_A1_2026-04-09.md
src/x_competitor/: main.py
src/x_competitor/agents/: analyst.py  collector.py  writer.py
src/x_competitor/config/: settings.py
src/x_competitor/tasks/: analyze_task.py  collect_task.py  write_task.py
src/x_competitor/tools/: cache.py  search_tool.py
tests/: test_tools.py
